--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "arxiv>=2.2.0",
+    "bs4>=0.0.2",
     "ipykernel>=6.29.5",
     "langchain>=0.3.25",
+    "langchain-community>=0.3.25",
     "langgraph>=0.4.8",
+    "pymupdf>=1.26.1",
+    "pypdf>=5.6.0",
+    "python-dotenv>=1.1.0",
+    "wikipedia>=1.4.0",
 ]
