--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "langchain>=0.3.25",
     "langchain-community>=0.3.25",
+    "langchain-openai>=0.3.24",
     "langgraph>=0.4.8",
     "pymupdf>=1.26.1",
     "pypdf>=5.6.0",
