--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.12"
 dependencies = [
     "arxiv>=2.2.0",
     "bs4>=0.0.2",
+    "chromadb>=1.0.12",
     "ipykernel>=6.29.5",
     "langchain>=0.3.25",
     "langchain-community>=0.3.25",
+    "langchain-ollama>=0.3.3",
     "langchain-openai>=0.3.24",
     "langgraph>=0.4.8",
     "pymupdf>=1.26.1",
