Added Hug. face, embeds, FAISS DB.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,17 @@ dependencies = [
     "arxiv>=2.2.0",
     "bs4>=0.0.2",
     "chromadb>=1.0.12",
+    "faiss-cpu>=1.11.0",
     "ipykernel>=6.29.5",
     "langchain>=0.3.25",
     "langchain-community>=0.3.25",
+    "langchain-huggingface>=0.3.0",
     "langchain-ollama>=0.3.3",
     "langchain-openai>=0.3.24",
     "langgraph>=0.4.8",
     "pymupdf>=1.26.1",
     "pypdf>=5.6.0",
     "python-dotenv>=1.1.0",
+    "sentence-transformers>=4.1.0",
     "wikipedia>=1.4.0",
 ]
